--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,10 @@
     "test": "tests"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "ts-node-dev --respawn --transpile-only src/main/server.ts",
+    "build": "tsc",
+    "start": "node dist/main/server.js",
+    "test": "jest --coverage"
   },
   "keywords": [],
   "author": "",
@@ -19,9 +22,7 @@
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.13.2",
-    "socket.io": "^4.8.1",
-    "ts-node-dev": "^2.0.0",
-    "typescript": "^5.8.3"
+    "socket.io": "^4.8.1"
   },
   "devDependencies": {
     "@types/express": "^5.0.1",
@@ -29,6 +30,8 @@
     "@types/node": "^22.14.0",
     "@types/socket.io": "^3.0.1",
     "jest": "^29.7.0",
-    "ts-jest": "^29.3.1"
+    "ts-jest": "^29.3.1",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.8.3"
   }
 }
