--- a/backend/package.json
+++ b/backend/package.json
@@ -25,8 +25,10 @@
     "socket.io": "^4.8.1"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/express": "^5.0.1",
     "@types/jest": "^29.5.14",
+    "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^22.14.0",
     "@types/socket.io": "^3.0.1",
     "jest": "^29.7.0",
