--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -9,7 +9,8 @@
       "forceConsistentCasingInFileNames": true,
       "strict": true,
       "skipLibCheck": true,
-      "sourceMap": true
+      "sourceMap": true,
+      "typeRoots": ["./src/types", "./node_modules/@types"],
     },
     "include": ["src/**/*"],
     "exclude": ["node_modules", "**/*.spec.ts"]
