--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,8 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
+    "emoji-picker-react": "^4.12.2",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.487.0",
     "prosemirror-model": "^1.25.0",
     "react": "^19.0.0",
