--- a/frontend/tsconfig.app.json
+++ b/frontend/tsconfig.app.json
@@ -1,20 +1,20 @@
-{
-  "compilerOptions": {
-    "composite": true,
-    "noEmit": false,
+// {
+//   "compilerOptions": {
+//     "composite": true,
+//     "noEmit": false,
 
-    "target": "ES2022",
-    "lib": ["DOM", "DOM.Iterable", "ES2022"],
-    "module": "ESNext",
-    "moduleResolution": "Node",
-    "jsx": "react-jsx",
-    "allowJs": false,
-    "esModuleInterop": true,
-    "resolveJsonModule": true,
-    "isolatedModules": true,
-    "strict": true,
-    "skipLibCheck": true,
-    "types": ["vite/client"]
-  },
-  "include": ["src"]
-}
+//     "target": "ES2022",
+//     "lib": ["DOM", "DOM.Iterable", "ES2022"],
+//     "module": "ESNext",
+//     "moduleResolution": "Node",
+//     "jsx": "react-jsx",
+//     "allowJs": false,
+//     "esModuleInterop": true,
+//     "resolveJsonModule": true,
+//     "isolatedModules": true,
+//     "strict": true,
+//     "skipLibCheck": true,
+//     "types": ["vite/client"]
+//   },
+//   "include": ["src"]
+// }
